Add: 新的优化无法在非J9的版本上运作，这会导致无法启动服务器 #2
Add: JvmCheck 新增参数path, 作用是检查Jvm名称
Fix: 传递带空格值报告内部异常的问题
Fix: stop: line 60/64: say2server: command not found
Fix: stop.sh: line 84: eGetI18nText: command not found